# app/Http/Requests/Api/User/UserUpdateRoleRequest.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Requests\Api\User;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UserUpdateRoleRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'role_id' => ['required', 'string', 'exists:roles,public_id'],
+        ];
+    }
+}
