# docs/api-contract.yaml
@@ -67,7 +67,7 @@ components:
         type: integer
         minimum: 1
         maximum: 100
-        default: 15
+        default: 10
     SortParam:
       name: sort
       in: query
@@ -211,12 +211,10 @@ components:
         is_active:
           type: boolean
           default: true
-        role_ids:
-          type: array
+        role_id:
+          type: string
+          format: uuid
           description: Array of Role public_id (UUID)
-          items:
-            type: string
-            format: uuid
 
     UserUpdate:
       type: object
@@ -237,13 +235,11 @@ components:
       type: object
       required: [role_ids]
       properties:
-        role_ids:
-          type: array
+        role_id:
+          type: string
+          format: uuid
           description: Array of Role public_id (UUID)
-          items:
-            type: string
-            format: uuid
-            example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+          example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
 
     # ---------- SUPPLIERS ----------
     Supplier:
